<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LogInActivity">

    <Button
        android:id="@+id/btnLoginSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/button_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/etLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/etLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

    <EditText
        android:id="@+id/etLoginNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/textview_background"
        android:ems="12"
        android:hint="@string/hint_nickname"
        android:inputType="textPersonName"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textAlignment="center"
        android:textColor="@color/textview_text"
        app:layout_constraintEnd_toEndOf="@+id/imgLoginAvatar"
        app:layout_constraintStart_toStartOf="@+id/imgLoginAvatar"
        app:layout_constraintTop_toBottomOf="@+id/imgLoginAvatar" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/textview_background"
        android:ems="12"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textAlignment="center"
        android:textColor="@color/textview_text"
        app:layout_constraintEnd_toEndOf="@+id/etLoginNickname"
        app:layout_constraintStart_toStartOf="@+id/etLoginNickname"
        app:layout_constraintTop_toBottomOf="@+id/etLoginNickname" />

    <ImageView
        android:id="@+id/imgLoginAvatar"
        android:layout_width="@dimen/login_avatar"
        android:layout_height="@dimen/login_avatar"
        android:src="@drawable/avatar_image_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/tvLoginNotRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_not_registered"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginSignUp"
        app:layout_constraintEnd_toEndOf="@+id/btnLoginSignUp"
        app:layout_constraintStart_toStartOf="@+id/btnLoginSignUp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginSignUp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/button_sign_up"
        android:textColor="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLoginSignIn"
        app:layout_constraintStart_toStartOf="@+id/btnLoginSignIn"
        app:strokeColor="@color/dark_gray" />

</androidx.constraintlayout.widget.ConstraintLayout>