<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignUpActivity">

    <Button
        android:id="@+id/btnSignUpSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/button_sign_up"
        app:layout_constraintEnd_toEndOf="@+id/etSignUpPassword"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/etSignUpPassword"
        app:layout_constraintTop_toBottomOf="@+id/etSignUpWhatIDo" />

    <EditText
        android:id="@+id/etSignUpNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/textview_background"
        android:ems="12"
        android:hint="@string/hint_nickname"
        android:inputType="textPersonName"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textAlignment="center"
        android:textColor="@color/textview_text"
        app:layout_constraintEnd_toEndOf="@+id/imgSignUpAvatar"
        app:layout_constraintStart_toStartOf="@+id/imgSignUpAvatar"
        app:layout_constraintTop_toBottomOf="@+id/imgSignUpAvatar" />

    <EditText
        android:id="@+id/etSignUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/textview_background"
        android:ems="12"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textAlignment="center"
        android:textColor="@color/textview_text"
        app:layout_constraintEnd_toEndOf="@+id/etSignUpNickname"
        app:layout_constraintStart_toStartOf="@+id/etSignUpNickname"
        app:layout_constraintTop_toBottomOf="@+id/etSignUpNickname" />

    <EditText
        android:id="@+id/etSignUpWhatIDo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/textview_background"
        android:ems="12"
        android:hint="@string/hint_edittext_what_i_do"
        android:inputType="textPersonName"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textAlignment="center"
        android:textColor="@color/textview_text"
        app:layout_constraintEnd_toEndOf="@+id/etSignUpPassword"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/etSignUpPassword"
        app:layout_constraintTop_toBottomOf="@+id/etSignUpPassword" />

    <ImageView
        android:id="@+id/imgSignUpAvatar"
        android:layout_width="@dimen/login_avatar"
        android:layout_height="@dimen/login_avatar"
        android:src="@drawable/avatar_image_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>